[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://World/Objects/Crops/Tomato.png" type="Texture" id=2]
[ext_resource path="res://Utils/Overlap/InteractionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Objects/Crops/CropWorldComponent.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 3.16228

[node name="CropWorldComponent" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 4 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 0, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="InteractionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="InteractionZone" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="InteractionZone"]
